--- a/projects.html
+++ b/projects.html
@@ -83,11 +83,11 @@
                 <!-- here -->
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-4 ">
                     <div class="flex-grow-1 ">
-                        <h4 class="mb-0 ">Gulshan-1 intersection Simulation for CAPSTONE Project L4-T1</h4>
+                        <h4 class="mb-0 ">IOT based door-lock system L4-T1</h4>
                         <div class="subheading mb-0 "><a href="https://drive.google.com/drive/folders/1G-ObsIy0F4a4Pn6IwvsDgkmnoDcvCVD0?usp=drive_link">[Demo
                                 Video + Project Report]</a>
                         </div>
-                        <p><strong>Technologies:</strong> <i>VISSIM Software</i> </p>
+                        <p><strong>Technologies:</strong>IOT <i></i> </p>
                         <p>In this project, we designed the mechanical and electrical systems of the door lock, which can be controlled in three ways: via commands from the app, an external key, or fingerprint recognition.
                         </p>
                     </div>
