--- a/index.html
+++ b/index.html
@@ -108,16 +108,16 @@
 
                     <a class="social-item" href="https://www.linkedin.com/in/sazzadulislam-4337911b1/"><i
                             class="ti-linkedin"></i></a>
-                    <a class="social-item" href=https://youtube.com/@kaiserhamid1007?si=ql5qjv-ufkJzjRIW>
-                        <i class="ti-youtube"></i>
+<!--                     <a class="social-item" href=https://youtube.com/@kaiserhamid1007?si=ql5qjv-ufkJzjRIW>
+                        <i class="ti-youtube"></i> -->
 
-                        <a class="social-item" href="https://github.com/kaiser-75"><i class="ti-github"></i></a>
+                        <a class="social-item" href="https://github.com/SAZZADUL-ISLAM"><i class="ti-github"></i></a>
                         <a class="social-item" href="https://www.facebook.com/sazzaduli"><i
                                 class="ti-facebook"></i></a>
                 </div>
             </div>
             <div class="img-holder">
-                <img src="assets/imgs/Sazzad.JPG" alt="Sazzad" class="mb-1">
+                <img src="assets/imgs/Sazzad.jpg" alt="Sazzad" class="mb-1">
 
             </div>
 
