--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     <section class="section mt-8">
         <div class="mobile-only">
-            <img src="assets/imgs/Sazzad.JPG" alt="Sazzad" class="mb-1">
+            <img src="assets/imgs/Sazzad.jpg" alt="Sazzad" class="mb-1">
             <style>
                 /* CSS code to make images responsive on mobile view */
                 img {
