--- a/education.html
+++ b/education.html
@@ -9,7 +9,7 @@
     <!--favicon-->
     <link rel="icon" type="image/png" href="assets/imgs/buet.png">
 
-    <title>Kaiser Hamid</title>
+    <title>Sazzadul Islam</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
@@ -144,7 +144,7 @@
 
     <section class="section mt-3">
         <div class="container mt-8">
-            <p class="copyright "> © <em id="date">2023</em> Kaiser Hamid
+            <p class="copyright "> © <em id="date">2024</em> Sazzdul Islam
             </p>
         </div>
         <p>
