--- a/publication.html
+++ b/publication.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" data-spy="affix" data-offset-top="0">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <h6 class="title">Kaiser</h6>
+                <h6 class="title">Sazzad</h6>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
