--- a/skills.html
+++ b/skills.html
@@ -164,7 +164,7 @@
     </div>
     <section class="section mt-3">
         <div class="container mt-8">
-            <p class="copyright "> © <em id="date">2023</em> Kaiser Hamid
+            <p class="copyright "> © <em id="date">2024</em> Sazzadul Islam
             </p>
         </div>
         <p>
