--- a/education.html
+++ b/education.html
@@ -93,7 +93,7 @@
                         </h3>
                         <div class="subheading mb-2 ">B.Sc. Engg in Electrical and Electronic Engineering (EEE) </div>
                         <p>
-                            <strong>Major: </strong>Transportation Engineering<br>
+                            <strong>Major: </strong>Electronics<br>
                             <strong>CGPA: </strong>3.9538/4.00 (up to 7th semester)
                             <!-- <br> -->
                         </p>
