--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <!-- Left side with image and details -->
             <div class="col-md-4 text-center mb-4 mb-md-0">
                 <div class="text-center mb-4">
-                    <img src="assets/imgs/dp.JPG" alt="Kaiser" class="mb-1 rounded-circle">
+                    <img src="assets/imgs/dp.JPG" alt="Sazzad" class="mb-1 rounded-circle">
                 </div>
                 <div class="text-center">
                     <h1 class="title" style="font-size: 40px; display: inline-block;">Sazzadul Islam</h1>
