--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
                 <div class="text-center">
                     <h1 class="title" style="font-size: 40px; display: inline-block;">Sazzadul Islam</h1>
                     <small>(he/his/him)</small>
-                    <p>Graduate Research Associate </p>
-                    <p>PhD student at <a href="https://www.ttu.edu/">Texas Tech University</a></p>
+                    <p>Lecturer(CSE) at <a href="https://www.bracu.ac.bd/">Brac University</a></p>
+                    <p>,and M.Sc. student(EEE) at <a href="https://www.buet.ac.bd/">Bangladesh University of Engineering and Technology</a></p>
                     <div class="buttons pt-3">
-                        <a href="assets/files/Kaiser_Hamid.pdf" download>
+                        <a href="assets/files/SAZZADUL_ISLAM_CV.pdf" download>
                             <button class="btn btn-dark rounded">Download CV</button>
                         </a>
                     </div>
